--- a/apps/web/src/app/pipeline/PipelinePage.module.css
+++ b/apps/web/src/app/pipeline/PipelinePage.module.css
@@ -1506,9 +1506,28 @@
   line-height: 1.45;
 }
 
+@media (max-width: 1350px) {
+  .filters {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .searchBox {
+    grid-column: span 2;
+  }
+
+  .filterButtons {
+    grid-column: 1 / -1;
+    justify-content: flex-end;
+  }
+}
+
 @media (max-width: 1050px) {
   .filters {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .searchBox {
+    grid-column: 1 / -1;
   }
 
   .filterButtons {
@@ -1543,6 +1562,10 @@
 
   .filters {
     grid-template-columns: 1fr;
+  }
+
+  .searchBox {
+    grid-column: 1 / -1;
   }
 
   .propertySheet {
